[gd_scene load_steps=9 format=2]

[ext_resource path="res://menu/editor/editor.gd" type="Script" id=1]
[ext_resource path="res://menu/editor/ui/ui.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/maps/grand/grand_map.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/camera/movable_camera.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/clickable_floor/clickable_floor.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/enviroment/enviroment.tscn" type="PackedScene" id=6]

[sub_resource type="SphereMesh" id=1]
radius = 0.2
height = 0.4
radial_segments = 16
rings = 8

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
albedo_color = Color( 1, 0, 0, 1 )

[node name="editor" type="Node"]
script = ExtResource( 1 )

[node name="ui" parent="." instance=ExtResource( 2 )]

[node name="enviroment" parent="." instance=ExtResource( 6 )]

[node name="movable_camera" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 2 )

[node name="clickable_floor" parent="." instance=ExtResource( 5 )]

[node name="grand_map" parent="." instance=ExtResource( 3 )]

[node name="redball_test" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
software_skinning_transform_normals = false
material/0 = SubResource( 2 )

[connection signal="screen_pressed" from="ui" to="." method="_on_ui_screen_pressed"]
[connection signal="on_floor_clicked" from="clickable_floor" to="." method="_on_clickable_floor_on_floor_clicked"]
[connection signal="on_map_ready" from="grand_map" to="." method="_on_grand_map_on_map_ready"]
